[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.1.0"
description = "My first package"
license = {file = "LICENSE.txt"}

dependencies = [
  "numpy>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "bumpver",
  "pytest",
  "pytest-cov",
]
